--- a/css/global.css
+++ b/css/global.css
@@ -7,14 +7,14 @@
 
 main {
     min-width: 100vw;
-    /* min-height: 100vh; */
-    background-image: url(./../assets/sid-balachandran-cUpp1gAEtiU-unsplash.jpg);
-    background-size: cover;
     min-height: 100vh;
 
     display: flex;
     justify-content: center;
     align-items: center;
+
+    background-image: url(./../assets/sid-balachandran-cUpp1gAEtiU-unsplash.jpg);
+    background-size: cover;
 }
 
 ul {
@@ -26,18 +26,18 @@ a {
 }
 
 main .enter-data {
-    background-color: rgba(28, 28, 28, 0.55);
-
     z-index: 1;
 
     width: 450px;
     height: 550px;
-    padding: 20px 50px;
+    padding: auto;
+    padding: 10px 45px;
 
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: space-evenly;
 
+    background-color: rgba(28, 28, 28, 0.55);
 }
 
 nav ul {
@@ -51,6 +51,14 @@ nav ul {
 
 ul li a {
     color: rgba(255, 255, 255, 0.70);
+}
+
+ul li a:hover {
+    border-bottom: 6px solid;
+    border-image: linear-gradient(to bottom right, #26b691, #1478b0, #8c3db9, #c51bc6);
+    border-image-slice: 1;
+    width: 100%;
+    /* border-bottom: 2px solid deeppink; */
 }
 
 span {
@@ -75,7 +83,7 @@ button {
     cursor: pointer;
 }
 
-.btn-login {
+.btn {
     background: linear-gradient(271deg, #26b691, #1478b0, #8c3db9, #c51bc6);
     background-size: 800% 800%;
 
